--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "air-datepicker": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "i": "^0.3.7",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "animejs": "3.2.1",
     "webpack-dev-server": "^3"
   }
 }
