--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "air-datepicker": "^3.1.0",
+    "animejs": "^3.2.1",
     "bootstrap": "^5.1.3",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "animejs": "3.2.1",
     "webpack-dev-server": "^3"
   }
 }
