--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "air-datepicker": "^3.1.0",
     "animejs": "^3.2.1",
     "bootstrap": "^5.1.3",
-    "bs5-lightbox": "^1.7.7",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "lightbox2": "^2.11.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
