--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bbq",
   "private": true,
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "@popperjs/core": "^2.11.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
