add example of database config

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -4,6 +4,9 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+#   To activate remove ".example"
+#
+
 default: &default
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -21,5 +24,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: # You database example "postgresql"
+  database: # Name of your application
+  username: # Your username
+  password: # Your password
+
